# pmem-nvme-dropin

./: README.md
microbenchmarks/: .gitignore  CMakeLists.txt  README.md
microbenchmarks/include/: argh.h  buffer_manager.hpp  iowrapper.hpp  util.hpp  workload.hpp
microbenchmarks/include/termcolor/: termcolor.h
microbenchmarks/src/bench/: final_buffermanagement.py  final_logging_libpmem.py  final_logging_linux.py  final_logging_linux_prefault.py  final_tablescan.py
microbenchmarks/src/lib/: buffer_manager.cpp  util.cpp
microbenchmarks/src/lib/append/: append.cpp  libpm_prefaulted_append.cpp  libpmem_append.cpp  linux_append.cpp  linux_preallocated_append.cpp  linux_prefaulted_append.cpp
microbenchmarks/src/lib/iowrapper/: asm_iowrapper.cpp  iowrapper.cpp  libpm_iowrapper.cpp  linux_iowrapper.cpp  mmap_iowrapper.cpp  std_iowrapper.cpp
microbenchmarks/src/lib/workloads/: buffermanagement.cpp  logging.cpp  logging2.cpp  tablescan.cpp
tpc_postgres/: .gitignore  README.md  defaults.sh  postgres.sh  postgresql.conf  postgresql_default.conf  tpch.sh
tpc_postgres/container_prep/: prepare.sh
